<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MaiAvtoTable</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_student_edit">MainActivity</string>
    <string name="mkpp">MKPP</string>
    <string name="akpp">AKPP</string>
    <string name="city">City</string>
    <string name="theory">Theory</string>
    <string name="training">Training</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
</resources>
